fix spot-detail overflow

--- a/frontend/src/components/SpotDetail/SpotDetail.module.css
+++ b/frontend/src/components/SpotDetail/SpotDetail.module.css
@@ -15,6 +15,7 @@
 .spotDescription {
     font-size: 15pt;
     text-align: left;
+    overflow-wrap: break-word;
 }
 
 .hostInfo {
